// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form controlled controlled 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test"
            placeholder="test input"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      class="c5"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 drDzQW"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 daLNjx"
            name="test"
            placeholder="test input"
            value="v"
          />
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 dFiTyj"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled 3`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 drDzQW"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 daLNjx"
            name="test"
            placeholder="test input"
            value="v"
          />
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 dFiTyj"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled Array of Form Fields 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  justify-content: space-between;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c6:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c6:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c6:focus >circle,
.c6:focus >ellipse,
.c6:focus >line,
.c6:focus >path,
.c6:focus >polygon,
.c6:focus >polyline,
.c6:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c6:focus ::-moz-focus-inner {
  border: 0;
}

.c6:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) >circle,
.c6:focus:not(:focus-visible) >ellipse,
.c6:focus:not(:focus-visible) >line,
.c6:focus:not(:focus-visible) >path,
.c6:focus:not(:focus-visible) >polygon,
.c6:focus:not(:focus-visible) >polyline,
.c6:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c5::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c5::-moz-placeholder {
  color: #AAAAAA;
}

.c5:-ms-input-placeholder {
  color: #AAAAAA;
}

.c5 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c5:-moz-placeholder,
.c5::-moz-placeholder {
  opacity: 1;
}

.c4 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c2 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1"
    >
      <div
        class="c2 "
      >
        <div
          class="c3 "
        >
          <div
            class="c4"
          >
            <input
              autocomplete="off"
              class="c5"
              name="phones[0].number"
              placeholder="number test input 1"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="c2 "
      >
        <div
          class="c3 "
        >
          <div
            class="c4"
          >
            <input
              autocomplete="off"
              class="c5"
              name="phones[0].ext"
              placeholder="ext test input 1"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1"
    >
      <div
        class="c2 "
      >
        <div
          class="c3 "
        >
          <div
            class="c4"
          >
            <input
              autocomplete="off"
              class="c5"
              name="phones[1].number"
              placeholder="number test input 2"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="c2 "
      >
        <div
          class="c3 "
        >
          <div
            class="c4"
          >
            <input
              autocomplete="off"
              class="c5"
              name="phones[1].ext"
              placeholder="ext test input 2"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1"
    >
      <div
        class="c2 "
      >
        <div
          class="c3 "
        >
          <div
            class="c4"
          >
            <input
              autocomplete="off"
              class="c5"
              name="phones[2].number"
              placeholder="number test input 3"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="c2 "
      >
        <div
          class="c3 "
        >
          <div
            class="c4"
          >
            <input
              autocomplete="off"
              class="c5"
              name="phones[2].ext"
              placeholder="ext test input 3"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="c6"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled Array of Form Fields 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 drDzQW"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 cCSeFN"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 daLNjx"
              name="phones[0].number"
              placeholder="number test input 1"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 daLNjx"
              name="phones[0].ext"
              placeholder="ext test input 1"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="StyledBox-sc-13pk1d4-0 cCSeFN"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 daLNjx"
              name="phones[1].number"
              placeholder="number test input 2"
              value="123456789"
            />
          </div>
        </div>
      </div>
      <div
        class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 daLNjx"
              name="phones[1].ext"
              placeholder="ext test input 2"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="StyledBox-sc-13pk1d4-0 cCSeFN"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 daLNjx"
              name="phones[2].number"
              placeholder="number test input 3"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 daLNjx"
              name="phones[2].ext"
              placeholder="ext test input 3"
              value="999"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 dFiTyj"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled Array of Form Fields 3`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 drDzQW"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 cCSeFN"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 daLNjx"
              name="phones[0].number"
              placeholder="number test input 1"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 daLNjx"
              name="phones[0].ext"
              placeholder="ext test input 1"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="StyledBox-sc-13pk1d4-0 cCSeFN"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 daLNjx"
              name="phones[1].number"
              placeholder="number test input 2"
              value="123456789"
            />
          </div>
        </div>
      </div>
      <div
        class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 daLNjx"
              name="phones[1].ext"
              placeholder="ext test input 2"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="StyledBox-sc-13pk1d4-0 cCSeFN"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 daLNjx"
              name="phones[2].number"
              placeholder="number test input 3"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 daLNjx"
              name="phones[2].ext"
              placeholder="ext test input 3"
              value="999"
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 dFiTyj"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled Array of Form Fields onValidate 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  justify-content: space-between;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c6:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c6:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c6:focus >circle,
.c6:focus >ellipse,
.c6:focus >line,
.c6:focus >path,
.c6:focus >polygon,
.c6:focus >polyline,
.c6:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c6:focus ::-moz-focus-inner {
  border: 0;
}

.c6:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) >circle,
.c6:focus:not(:focus-visible) >ellipse,
.c6:focus:not(:focus-visible) >line,
.c6:focus:not(:focus-visible) >path,
.c6:focus:not(:focus-visible) >polygon,
.c6:focus:not(:focus-visible) >polyline,
.c6:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c5::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c5::-moz-placeholder {
  color: #AAAAAA;
}

.c5:-ms-input-placeholder {
  color: #AAAAAA;
}

.c5 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c5:-moz-placeholder,
.c5::-moz-placeholder {
  opacity: 1;
}

.c4 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c2 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1"
    >
      <div
        class="c2 "
      >
        <div
          class="c3 "
        >
          <div
            class="c4"
          >
            <input
              autocomplete="off"
              class="c5"
              name="phones[0].number"
              placeholder="number test input 1"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="c2 "
      >
        <div
          class="c3 "
        >
          <div
            class="c4"
          >
            <input
              autocomplete="off"
              class="c5"
              name="phones[0].ext"
              placeholder="ext test input 1"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1"
    >
      <div
        class="c2 "
      >
        <div
          class="c3 "
        >
          <div
            class="c4"
          >
            <input
              autocomplete="off"
              class="c5"
              name="phones[1].number"
              placeholder="number test input 2"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="c2 "
      >
        <div
          class="c3 "
        >
          <div
            class="c4"
          >
            <input
              autocomplete="off"
              class="c5"
              name="phones[1].ext"
              placeholder="ext test input 2"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="c6"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled Array of Form Fields onValidate 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 drDzQW"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 cCSeFN"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 ekFCqu FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 daLNjx"
              name="phones[0].number"
              placeholder="number test input 1"
              value=""
            />
          </div>
        </div>
        .c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #EB0000;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<span
          class="c0"
        >
          required
        </span>
      </div>
      <div
        class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 daLNjx"
              name="phones[0].ext"
              placeholder="ext test input 1"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="StyledBox-sc-13pk1d4-0 cCSeFN"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 ekFCqu FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 daLNjx"
              name="phones[1].number"
              placeholder="number test input 2"
              value=""
            />
          </div>
        </div>
        .c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #EB0000;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<span
          class="c0"
        >
          required
        </span>
      </div>
      <div
        class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 daLNjx"
              name="phones[1].ext"
              placeholder="ext test input 2"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 dFiTyj"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled Array of Form Fields onValidate custom error 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
  justify-content: space-between;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c6:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c6:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c6:focus >circle,
.c6:focus >ellipse,
.c6:focus >line,
.c6:focus >path,
.c6:focus >polygon,
.c6:focus >polyline,
.c6:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c6:focus ::-moz-focus-inner {
  border: 0;
}

.c6:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) >circle,
.c6:focus:not(:focus-visible) >ellipse,
.c6:focus:not(:focus-visible) >line,
.c6:focus:not(:focus-visible) >path,
.c6:focus:not(:focus-visible) >polygon,
.c6:focus:not(:focus-visible) >polyline,
.c6:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c5::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c5::-moz-placeholder {
  color: #AAAAAA;
}

.c5:-ms-input-placeholder {
  color: #AAAAAA;
}

.c5 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c5:-moz-placeholder,
.c5::-moz-placeholder {
  opacity: 1;
}

.c4 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c2 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1"
    >
      <div
        class="c2 "
      >
        <div
          class="c3 "
        >
          <div
            class="c4"
          >
            <input
              autocomplete="off"
              class="c5"
              name="phones[0].number"
              placeholder="number test input 1"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="c2 "
      >
        <div
          class="c3 "
        >
          <div
            class="c4"
          >
            <input
              autocomplete="off"
              class="c5"
              name="phones[0].ext"
              placeholder="ext test input 1"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1"
    >
      <div
        class="c2 "
      >
        <div
          class="c3 "
        >
          <div
            class="c4"
          >
            <input
              autocomplete="off"
              class="c5"
              name="phones[1].number"
              placeholder="number test input 2"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="c2 "
      >
        <div
          class="c3 "
        >
          <div
            class="c4"
          >
            <input
              autocomplete="off"
              class="c5"
              name="phones[1].ext"
              placeholder="ext test input 2"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="c6"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled Array of Form Fields onValidate custom error 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 drDzQW"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 cCSeFN"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 daLNjx"
              name="phones[0].number"
              placeholder="number test input 1"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 daLNjx"
              name="phones[0].ext"
              placeholder="ext test input 1"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="StyledBox-sc-13pk1d4-0 cCSeFN"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 ekFCqu FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 daLNjx"
              name="phones[1].number"
              placeholder="number test input 2"
              value="sadasd"
            />
          </div>
        </div>
        .c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #EB0000;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<span
          class="c0"
        >
          Only Numbers
        </span>
      </div>
      <div
        class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
        >
          <div
            class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
          >
            <input
              autocomplete="off"
              class="StyledTextInput-sc-1x30a0s-0 daLNjx"
              name="phones[1].ext"
              placeholder="ext test input 2"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 dFiTyj"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled FormField deprecated 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
}

.c6 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c6:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c6:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c6:focus >circle,
.c6:focus >ellipse,
.c6:focus >line,
.c6:focus >path,
.c6:focus >polygon,
.c6:focus >polyline,
.c6:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c6:focus ::-moz-focus-inner {
  border: 0;
}

.c6:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) >circle,
.c6:focus:not(:focus-visible) >ellipse,
.c6:focus:not(:focus-visible) >line,
.c6:focus:not(:focus-visible) >path,
.c6:focus:not(:focus-visible) >polygon,
.c6:focus:not(:focus-visible) >polyline,
.c6:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c6:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c5 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c5::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c5::-moz-placeholder {
  color: #AAAAAA;
}

.c5:-ms-input-placeholder {
  color: #AAAAAA;
}

.c5 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c5::-moz-focus-inner {
  border: none;
  outline: none;
}

.c5:-moz-placeholder,
.c5::-moz-placeholder {
  opacity: 1;
}

.c4 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <label
        class="c2"
        for="test"
      >
        test
      </label>
      <div
        class="c3 "
      >
        <div
          class="c4"
        >
          <input
            autocomplete="off"
            class="c5"
            id="test"
            name="test"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      class="c6"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled FormField deprecated 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 drDzQW"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
    >
      <label
        class="StyledText-sc-1sadyjn-0 bEFXqT"
        for="test"
      >
        test
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 daLNjx"
            id="test"
            name="test"
            value="v"
          />
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 dFiTyj"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled FormField deprecated 3`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 drDzQW"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
    >
      <label
        class="StyledText-sc-1sadyjn-0 bEFXqT"
        for="test"
      >
        test
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 daLNjx"
            id="test"
            name="test"
            value="v"
          />
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 dFiTyj"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled input 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test"
            placeholder="test input"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      class="c5"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled input 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 drDzQW"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 daLNjx"
            name="test"
            placeholder="test input"
            value="v"
          />
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 dFiTyj"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled input 3`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 drDzQW"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 daLNjx"
            name="test"
            placeholder="test input"
            value="v"
          />
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 dFiTyj"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled input lazy 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test"
            placeholder="test input"
            value="test"
          />
        </div>
      </div>
    </div>
    <button
      class="c5"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled input lazy 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 drDzQW"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 daLNjx"
            name="test"
            placeholder="test input"
            value="v"
          />
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 dFiTyj"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled input lazy 3`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 drDzQW"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 daLNjx"
            name="test"
            placeholder="test input"
            value="v"
          />
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 dFiTyj"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled lazy 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test"
            placeholder="test input"
            value="test"
          />
        </div>
      </div>
    </div>
    <button
      class="c5"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled lazy 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 drDzQW"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 daLNjx"
            name="test"
            placeholder="test input"
            value="v"
          />
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 dFiTyj"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled lazy 3`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 drDzQW"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 daLNjx"
            name="test"
            placeholder="test input"
            value="v"
          />
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 dFiTyj"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled onChange touched 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test"
            placeholder="test input"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      class="c5"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled onValidate 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test"
            placeholder="test input"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      class="c5"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled onValidate 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 drDzQW"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 ekFCqu FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 daLNjx"
            name="test"
            placeholder="test input"
            value=""
          />
        </div>
      </div>
      .c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #EB0000;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<span
        class="c0"
      >
        required
      </span>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 dFiTyj"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled onValidate custom error 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test"
            placeholder="test input"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      class="c5"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled onValidate custom error 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 drDzQW"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 ekFCqu FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 daLNjx"
            name="test"
            placeholder="test input"
            value=""
          />
        </div>
      </div>
      .c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #EB0000;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<span
        class="c0"
      >
        One uppercase letter
      </span>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 dFiTyj"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled onValidate custom info 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c5:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c5:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus >circle,
.c5:focus >ellipse,
.c5:focus >line,
.c5:focus >path,
.c5:focus >polygon,
.c5:focus >polyline,
.c5:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c5:focus ::-moz-focus-inner {
  border: 0;
}

.c5:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) >circle,
.c5:focus:not(:focus-visible) >ellipse,
.c5:focus:not(:focus-visible) >line,
.c5:focus:not(:focus-visible) >path,
.c5:focus:not(:focus-visible) >polygon,
.c5:focus:not(:focus-visible) >polyline,
.c5:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c5:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="test"
            placeholder="test input"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      class="c5"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled controlled onValidate custom info 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 drDzQW"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 daLNjx"
            name="test"
            placeholder="test input"
            value=""
          />
        </div>
      </div>
      .c0 {
  margin-left: 12px;
  margin-right: 12px;
  margin-top: 6px;
  margin-bottom: 6px;
  font-size: 18px;
  line-height: 24px;
  color: #666666;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<span
        class="c0"
      >
        One uppercase letter
      </span>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 dFiTyj"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled custom theme 1`] = `
.c9 {
  display: inline-block;
  flex: 0 0 auto;
  width: 24px;
  height: 24px;
  fill: #666666;
  stroke: #666666;
}

.c9 g {
  fill: inherit;
  stroke: inherit;
}

.c9 *:not([stroke])[fill='none'] {
  stroke-width: 0;
}

.c9 *[stroke*='#'],
.c9 *[STROKE*='#'] {
  stroke: inherit;
  fill: none;
}

.c9 *[fill-rule],
.c9 *[FILL-RULE],
.c9 *[fill*='#'],
.c9 *[FILL*='#'] {
  fill: inherit;
  stroke: none;
}

.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c4 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: row;
}

.c6 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  flex: 0 0 auto;
}

.c8 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c10 {
  flex: 0 0 auto;
  align-self: stretch;
  width: 12px;
}

.c5 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c5:hover input:not([disabled])+div,
.c5:hover input:not([disabled])+span {
  border-color: #000000;
}

.c7 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c2 {
  margin-bottom: 6px;
  font-size: 22px;
  line-height: 28px;
  color: red;
  font-weight: 400;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c3 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    width: 6px;
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <label
        class="c2"
      >
        custom theme label
      </label>
      <div
        class="c3 "
      >
        <div
          class="c4"
          role="radiogroup"
        >
          <label
            class="c5"
            for="like"
          >
            <div
              class="c6 "
            >
              <input
                class="c7"
                id="like"
                name="test"
                tabindex="0"
                type="radio"
                value="like"
              />
              <div
                class="c8 "
              >
                <svg
                  aria-label="Like"
                  class="c9"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M1 23h19c2 0 3-1 3-3V10h-7V4c0-2-1-3-3-3h-2s-.016 6-.016 7.326C10.984 9.652 10 11 8 11H1v12zm5 0V11"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </label>
          <div
            class="c10"
          />
          <label
            class="c5"
            for="dislike"
          >
            <div
              class="c6 "
            >
              <input
                class="c7"
                id="dislike"
                name="test"
                tabindex="-1"
                type="radio"
                value="dislike"
              />
              <div
                class="c8 "
              >
                <svg
                  aria-label="Dislike"
                  class="c9"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M23 1H4C2 1 1 2 1 4v10h7v6c0 2 1 3 3 3h2s.016-6 .016-7.326C13.016 14.348 14 13 16 13h7V1zm-5 0v12"
                    fill="none"
                    stroke="#000"
                    stroke-width="2"
                  />
                </svg>
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form controlled dynamicly removed fields using blur validation
  don't keep validation errors 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c2 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c5 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  padding: 12px;
}

.c7 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-right: 12px;
  align-items: center;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  justify-content: center;
}

.c10 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  align-items: center;
  border: solid 2px rgba(0, 0, 0, 0.15);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
  height: 24px;
  width: 24px;
  justify-content: center;
  border-radius: 4px;
}

.c6 {
  display: flex;
  flex-direction: row;
  align-items: center;
  user-select: none;
  -webkit-user-select: none;
  width: fit-content;
  cursor: pointer;
}

.c6:hover input:not([disabled])+div,
.c6:hover input:not([disabled])+span {
  border-color: #000000;
}

.c9 {
  opacity: 0;
  -moz-appearance: none;
  width: 0;
  height: 0;
  margin: 0;
  cursor: pointer;
}

.c9:checked+span>span {
  left: calc( 48px - 24px );
  background: #7D4CDB;
}

.c8 {
  flex-shrink: 0;
}

.c11 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  background-color: #7D4CDB;
  color: #f8f8f8;
  border-radius: 18px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c11:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c11:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c11:focus >circle,
.c11:focus >ellipse,
.c11:focus >line,
.c11:focus >path,
.c11:focus >polygon,
.c11:focus >polyline,
.c11:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c11:focus ::-moz-focus-inner {
  border: 0;
}

.c11:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible) >circle,
.c11:focus:not(:focus-visible) >ellipse,
.c11:focus:not(:focus-visible) >line,
.c11:focus:not(:focus-visible) >path,
.c11:focus:not(:focus-visible) >polygon,
.c11:focus:not(:focus-visible) >polyline,
.c11:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c11:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c4 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c4::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c4::-moz-placeholder {
  color: #AAAAAA;
}

.c4:-ms-input-placeholder {
  color: #AAAAAA;
}

.c4 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c4::-moz-focus-inner {
  border: none;
  outline: none;
}

.c4:-moz-placeholder,
.c4::-moz-placeholder {
  opacity: 1;
}

.c3 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c1 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c2 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {
  .c5 {
    padding: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c7 {
    margin-right: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c10 {
    border: solid 2px rgba(0, 0, 0, 0.15);
  }
}

<div
  class="c0"
>
  <form>
    <div
      class="c1 "
    >
      <div
        class="c2 "
      >
        <div
          class="c3"
        >
          <input
            autocomplete="off"
            class="c4"
            name="name"
            placeholder="test name"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="c1 "
    >
      <div
        class="c5 "
      >
        <label
          class="c6"
        >
          <div
            class="c7 c8"
          >
            <input
              class="c9"
              name="toggle"
              type="checkbox"
            />
            <div
              class="c10 "
            />
          </div>
          <span>
            toggle
          </span>
        </label>
      </div>
    </div>
    <button
      class="c11"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled dynamicly removed fields using blur validation
  don't keep validation errors 2`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 drDzQW"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 daLNjx"
            name="name"
            placeholder="test name"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jpZXcT FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 bibnmu"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hvphdk StyledCheckBox-sc-1dbk5ju-6 hKWwLV"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 hLBAbU"
              name="toggle"
              type="checkbox"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 kAISfb StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cOXigx"
            >
              .c0 {
  box-sizing: border-box;
  stroke-width: 4px;
  stroke: #7D4CDB;
  width: 24px;
  height: 24px;
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<svg
                class="c0"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M6,11.3 L10.3,16 L18,6.2"
                  fill="none"
                />
              </svg>
            </div>
          </div>
          <span>
            toggle
          </span>
        </label>
      </div>
    </div>
    .c0 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  margin-bottom: 12px;
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c1 {
  display: flex;
  box-sizing: border-box;
  max-width: 100%;
  border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  min-width: 0;
  min-height: 0;
  flex-direction: column;
}

.c3 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
  outline: none;
  border: none;
}

.c3::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c3::-moz-placeholder {
  color: #AAAAAA;
}

.c3:-ms-input-placeholder {
  color: #AAAAAA;
}

.c3 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c3::-moz-focus-inner {
  border: none;
  outline: none;
}

.c3:-moz-placeholder,
.c3::-moz-placeholder {
  opacity: 1;
}

.c2 {
  position: relative;
  width: 100%;
}

@media only screen and (max-width: 768px) {
  .c0 {
    margin-bottom: 6px;
  }
}

@media only screen and (max-width: 768px) {
  .c1 {
    border-bottom: solid 1px rgba(0, 0, 0, 0.33);
  }
}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

@media only screen and (max-width: 768px) {

}

<div
      class="c0 "
    >
      <div
        class="c1 "
      >
        <div
          class="c2"
        >
          <input
            autocomplete="off"
            class="c3"
            name="mood"
            placeholder="test mood"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 dFiTyj"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled dynamicly removed fields using blur validation
  don't keep validation errors 3`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 drDzQW"
>
  <form>
    <div
      class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 egHdhy FormField__FormFieldContentBox-sc-m9hood-1 eZfyAI"
      >
        <div
          class="StyledTextInput__StyledTextInputContainer-sc-1x30a0s-1 fayRfZ"
        >
          <input
            autocomplete="off"
            class="StyledTextInput-sc-1x30a0s-0 daLNjx"
            name="name"
            placeholder="test name"
            value=""
          />
        </div>
      </div>
    </div>
    <div
      class="StyledBox-sc-13pk1d4-0 jhVljw FormField__FormFieldBox-sc-m9hood-0 hvnrHE"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 jpZXcT FormField__FormFieldContentBox-sc-m9hood-1 jrFJwT"
      >
        <label
          class="StyledCheckBox__StyledCheckBoxContainer-sc-1dbk5ju-1 iTbkTo"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 hvphdk StyledCheckBox-sc-1dbk5ju-6 hKWwLV"
          >
            <input
              class="StyledCheckBox__StyledCheckBoxInput-sc-1dbk5ju-2 hLBAbU"
              name="toggle"
              type="checkbox"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 laRgif StyledCheckBox__StyledCheckBoxBox-sc-1dbk5ju-3 cOXigx"
            />
          </div>
          <span>
            toggle
          </span>
        </label>
      </div>
    </div>
    <button
      class="StyledButton-sc-323bzc-0 dFiTyj"
      type="submit"
    >
      Submit
    </button>
  </form>
</div>
`;

exports[`Form controlled lazy value 1`] = `
.c0 {
  font-size: 18px;
  line-height: 24px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

.c3 {
  display: inline-block;
  box-sizing: border-box;
  cursor: pointer;
  font: inherit;
  text-decoration: none;
  margin: 0;
  background: transparent;
  overflow: visible;
  text-transform: none;
  border: 2px solid #7D4CDB;
  border-radius: 18px;
  color: #444444;
  padding: 4px 22px;
  font-size: 18px;
  line-height: 24px;
  transition-property: color,background-color,border-color,box-shadow;
  transition-duration: 0.1s;
  transition-timing-function: ease-in-out;
}

.c3:hover {
  box-shadow: 0px 0px 0px 2px #7D4CDB;
}

.c3:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus >circle,
.c3:focus >ellipse,
.c3:focus >line,
.c3:focus >path,
.c3:focus >polygon,
.c3:focus >polyline,
.c3:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c3:focus ::-moz-focus-inner {
  border: 0;
}

.c3:focus:not(:focus-visible) {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) >circle,
.c3:focus:not(:focus-visible) >ellipse,
.c3:focus:not(:focus-visible) >line,
.c3:focus:not(:focus-visible) >path,
.c3:focus:not(:focus-visible) >polygon,
.c3:focus:not(:focus-visible) >polyline,
.c3:focus:not(:focus-visible) >rect {
  outline: none;
  box-shadow: none;
}

.c3:focus:not(:focus-visible) ::-moz-focus-inner {
  border: 0;
}

.c2 {
  box-sizing: border-box;
  font-size: inherit;
  font-family: inherit;
  border: none;
  -webkit-appearance: none;
  background: transparent;
  color: inherit;
  width: 100%;
  padding: 11px;
  font-weight: 600;
  margin: 0;
  border: 1px solid rgba(0, 0, 0, 0.33);
  border-radius: 4px;
}

.c2:focus {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c2:focus >circle,
.c2:focus >ellipse,
.c2:focus >line,
.c2:focus >path,
.c2:focus >polygon,
.c2:focus >polyline,
.c2:focus >rect {
  outline: none;
  box-shadow: 0 0 2px 2px #6FFFB0;
}

.c2:focus ::-moz-focus-inner {
  border: 0;
}

.c2::-webkit-input-placeholder {
  color: #AAAAAA;
}

.c2::-moz-placeholder {
  color: #AAAAAA;
}

.c2:-ms-input-placeholder {
  color: #AAAAAA;
}

.c2 ::-webkit-search-decoration {
  -webkit-appearance: none;
}

.c2::-moz-focus-inner {
  border: none;
  outline: none;
}

.c2:-moz-placeholder,
.c2::-moz-placeholder {
  opacity: 1;
}

.c1 {
  position: relative;
  width: 100%;
}

<div
  class="c0"
>
  <form>
    <div
      class="c1"
    >
      <input
        autocomplete="off"
        class="c2"
        name="test"
        value=""
      />
    </div>
    <button
      class="c3"
      type="button"
    >
      set
    </button>
    <button
      class="c3"
      type="submit"
    >
      submit
    </button>
  </form>
</div>
`;
